--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="base_currency">Change Base Currency</string>
     <string name="misc">Miscellaneous</string>
 
+    <string name="marker_value">1 %1$s = %2$d %3$s</string>
+    <string name="marker_date">%1$s %2$s</string>
+
 </resources>
